# 3171599-Erik-Samuel-Crespo-fast-api

./: README.md
.github/: copilot-instructions.md
_docs/: docker-setup.md  stack-versions.md
bootcamp/week-01/: README.md
bootcamp/week-01/2-practicas/: README.md
bootcamp/week-01/2-practicas/01-ejercicio-setup/: README.md
bootcamp/week-01/2-practicas/01-ejercicio-setup/starter/: docker-compose.yml
bootcamp/week-01/2-practicas/02-ejercicio-type-hints/: README.md
bootcamp/week-01/2-practicas/02-ejercicio-type-hints/starter/: main.py
bootcamp/week-01/2-practicas/03-ejercicio-async/: README.md
bootcamp/week-01/2-practicas/03-ejercicio-async/starter/: main.py
bootcamp/week-01/2-practicas/04-ejercicio-primera-api/: README.md
bootcamp/week-01/2-practicas/04-ejercicio-primera-api/starter/: main.py
bootcamp/week-01/2-practicas/ejercicio-01-setup/starter/: Dockerfile  pyproject.toml
bootcamp/week-01/3-proyecto/: README.md
bootcamp/week-01/3-proyecto/starter/: Dockerfile  pyproject.toml
bootcamp/week-01/3-proyecto/starter/src/: app.py
bootcamp/week-02/: README.md
bootcamp/week-02/2-practicas/: README.md
bootcamp/week-02/2-practicas/01-ejercicio-basemodel/: README.md
bootcamp/week-02/2-practicas/01-ejercicio-basemodel/starter/: main.py  pyproject.toml
bootcamp/week-02/2-practicas/02-ejercicio-field/: README.md
bootcamp/week-02/2-practicas/02-ejercicio-field/starter/: Dockerfile  main.py
bootcamp/week-02/2-practicas/03-ejercicio-validadores/: README.md
bootcamp/week-02/2-practicas/03-ejercicio-validadores/starter/: main.py
bootcamp/week-02/2-practicas/04-ejercicio-integracion/: README.md
bootcamp/week-02/2-practicas/04-ejercicio-integracion/starter/: docker-compose.yml  main.py
bootcamp/week-02/3-proyecto/: README.md
bootcamp/week-02/3-proyecto/starter/: Dockerfile  database.py  main.py  pyproject.toml  schemas.py
bootcamp/week-03/: README.md
bootcamp/week-03/2-practicas/: README.md
bootcamp/week-03/2-practicas/01-ejercicio-rutas/: README.md
bootcamp/week-03/2-practicas/02-ejercicio-path-params/: README.md
bootcamp/week-03/2-practicas/02-ejercicio-path-params/starter/: main.py  pyproject.toml
bootcamp/week-03/2-practicas/03-ejercicio-query-params/: README.md
bootcamp/week-03/2-practicas/04-ejercicio-combinados/: README.md
bootcamp/week-03/2-practicas/ejercicio-03-query-params/starter/: pyproject.toml
bootcamp/week-03/3-proyecto/: README.md
bootcamp/week-03/3-proyecto/starter/: database.py  dependencies.py  main.py  pyproject.toml  schemas.py
bootcamp/week-04/: README.md
bootcamp/week-04/2-practicas/: README.md
bootcamp/week-04/2-practicas/01-ejercicio-response-models/: README.md
bootcamp/week-04/2-practicas/02-ejercicio-status-codes/: README.md
bootcamp/week-04/2-practicas/03-ejercicio-errores/: README.md
bootcamp/week-04/2-practicas/04-ejercicio-documentacion/: README.md
bootcamp/week-04/2-practicas/04-ejercicio-documentacion/starter/: main.py  pyproject.toml
bootcamp/week-04/3-proyecto/: README.md
bootcamp/week-04/3-proyecto/starter/: .dockerignore  Dockerfile  database.py  exceptions.py  main.py  models.py  pyproject.toml
bootcamp/week-05/: README.md
bootcamp/week-05/2-practicas/: README.md
bootcamp/week-05/2-practicas/01-ejercicio-configuracion/: README.md
bootcamp/week-05/2-practicas/02-ejercicio-modelos/: README.md
bootcamp/week-05/2-practicas/03-ejercicio-crud/: README.md
bootcamp/week-05/2-practicas/04-ejercicio-fastapi-db/: README.md
bootcamp/week-05/3-proyecto/: README.md
bootcamp/week-06/: README.md
bootcamp/week-06/3-proyecto/: README.md
bootcamp/week-06/3-proyecto/starter/: pyproject.toml
bootcamp/week-07/: README.md
bootcamp/week-07/3-proyecto/: README.md
bootcamp/week-07/3-proyecto/starter/: pyproject.toml
bootcamp/week-08/: README.md
bootcamp/week-08/3-proyecto/: README.md
bootcamp/week-08/3-proyecto/starter/: pyproject.toml
bootcamp/week-09/: README.md
bootcamp/week-09/2-practicas/01-definir-ports/starter/: pyproject.toml
bootcamp/week-09/2-practicas/02-crear-adapters/starter/: pyproject.toml
bootcamp/week-09/2-practicas/03-inyeccion-dependencias/starter/: pyproject.toml
bootcamp/week-09/2-practicas/04-testing-con-mocks/starter/: pyproject.toml
bootcamp/week-09/3-proyecto/: README.md
bootcamp/week-09/3-proyecto/starter/: Dockerfile  pyproject.toml
bootcamp/week-10/: README.md
bootcamp/week-10/2-practicas/01-domain-modeling/starter/: pyproject.toml
bootcamp/week-10/2-practicas/02-application-services/starter/: pyproject.toml
bootcamp/week-10/2-practicas/04-wiring-composition/starter/: pyproject.toml
bootcamp/week-10/3-proyecto/: README.md
bootcamp/week-10/3-proyecto/starter/: Dockerfile  pyproject.toml
bootcamp/week-11/: README.md
bootcamp/week-11/2-practicas/01-password-hashing/starter/: pyproject.toml
bootcamp/week-11/2-practicas/02-jwt-tokens/starter/: pyproject.toml
bootcamp/week-11/2-practicas/04-protected-endpoints/starter/: pyproject.toml
bootcamp/week-11/3-proyecto/: README.md
bootcamp/week-11/3-proyecto/starter/: pyproject.toml
bootcamp/week-12/: README.md
bootcamp/week-12/2-practicas/01-primeros-tests/: pyproject.toml
bootcamp/week-12/2-practicas/02-fixtures-avanzados/: pyproject.toml
bootcamp/week-12/2-practicas/03-testing-endpoints/: pyproject.toml
bootcamp/week-12/2-practicas/04-mocking-dependencies/: pyproject.toml
bootcamp/week-12/3-proyecto/: README.md
bootcamp/week-12/3-proyecto/starter/: pyproject.toml
bootcamp/week-13/: README.md
bootcamp/week-13/2-practicas/01-websocket-basico/starter/: pyproject.toml
bootcamp/week-13/3-proyecto/: README.md
bootcamp/week-13/3-proyecto/starter/: pyproject.toml
bootcamp/week-14/: README.md
bootcamp/week-14/3-proyecto/: README.md
bootcamp/week-14/3-proyecto/starter/: Dockerfile  pyproject.toml
bootcamp/week-15/: README.md
bootcamp/week-15/3-proyecto/: README.md
bootcamp/week-15/3-proyecto/starter/: Dockerfile  pyproject.toml
bootcamp/week-16/: README.md
bootcamp/week-16/3-proyecto/: README.md
(+38 files in other folders)
