[project]
name = "tienda-deportiva-api"
version = "1.0.0"
description = "Tienda Deportiva API - Proyecto Semana 04"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic>=2.9.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]