[project]
name = "blog-api"
version = "1.0.0"
description = "Blog API con Service Layer - Week 06"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "sqlalchemy>=2.0.46",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.29.0",
]
