[project]
name = "ejercicio-02-path-params"
version = "0.1.0"
description = "Ejercicio 02: Path Parameters con Validación"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
