[project]
name = "ejercicio-04-documentacion"
version = "1.0.0"
description = "Ejercicio de Documentación OpenAPI"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pydantic[email]>=2.10.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.0",
    "httpx>=0.29.0",
]
