[project]
name = "practica-01-definir-ports"
version = "0.1.0"
description = "Práctica: Definir Ports con Protocols"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.4.0",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
