[project]
name = "practica-02-crear-adapters"
version = "0.1.0"
description = "Práctica: Crear Adapters concretos"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=0.24.0",
]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
