[project]
name = "practica-03-inyeccion-dependencias"
version = "0.1.0"
description = "Práctica: Inyección de Dependencias con FastAPI"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.29.0",
]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
