[project]
name = "protected-endpoints-practice"
version = "0.1.0"
description = "Práctica de endpoints protegidos con JWT"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
