[project]
name = "websocket-basico"
version = "0.1.0"
description = "Práctica de WebSocket básico con FastAPI"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "jinja2>=3.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.0",
    "httpx>=0.29.0",
]
